syntax = "proto3";

package WindowStreamer.Protocol;

message UDPReady {
	int32 framerateCap = 1;
}

message ClientMessage {
    oneof msg {
        UDPReady UDPReady = 1;
    }
}